[project]
name = "marta-mcp"
version = "0.1.1"
description = "MCP server for Atlanta MARTA real-time rail and bus data"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rodney Nissen" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "gtfs-realtime-bindings>=1.0",
]

[project.scripts]
marta-mcp = "marta_mcp.server:main"
marta-mcp-config = "marta_mcp.config:cli"

[project.urls]
Homepage = "https://github.com/thejiraguy/marta-mcp"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marta_mcp"]
